--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 15rem auto;
+  align-items: center;
+  width: 16rem;
+  height: 12rem;
+  border: 0.1rem solid darkblue;
+  border-radius: 0.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+
+.countBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 12rem;
+  height: 8rem;
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+  border-radius: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem auto;
+  width: 12rem;
+  height: 8rem;
+  border: 0.1rem solid green;
+  border-radius: 0.5rem;
+}
+
+.disabledButton {
+  color: dimgrey;
 }
