--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+
 .App {
   display: flex;
   flex-direction: column;
