min and max useState added

--- a/src/components/SetCounterRange.module.css
+++ b/src/components/SetCounterRange.module.css
@@ -5,8 +5,8 @@
     margin: 1rem auto;
     width: 12rem;
     height: 8rem;
-    border: 0.1rem solid green;
-    border-radius: 0.5rem;
+    /*border: 0.1rem solid green;*/
+    /*border-radius: 0.5rem;*/
 }
 
 .input {
